<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountInfo">
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="#EEE"
        android:orientation="vertical"
        android:paddingBottom="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav5_act1_str0"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/light_textcolor"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/account_icon"/>
        <TextView
            android:id="@+id/nav5_act1_str_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav5_act1_str1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/light_textcolor"/>
        <TextView
            android:id="@+id/nav5_act1_str_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav5_act1_str2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/light_textcolor"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/nav5_act1_str_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str3"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/light_textcolor"/>
                <TextView
                    android:id="@+id/nav5_act1_str_3_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str3_value"
                    android:textSize="12sp"
                    android:textColor="@color/light_textcolor"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/nav5_act1_str_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str4"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/light_textcolor"/>
                <TextView
                    android:id="@+id/nav5_act1_str_4_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str4_value"
                    android:textSize="12sp"
                    android:textColor="@color/light_textcolor"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/nav5_act1_str_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str5"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/light_textcolor"/>
                <TextView
                    android:id="@+id/nav5_act1_str_5_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str5_value"
                    android:textSize="12sp"
                    android:textColor="@color/light_textcolor"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/nav5_act1_str_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str6"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/light_textcolor"/>
                <TextView
                    android:id="@+id/nav5_act1_str_6_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act1_str6_value"
                    android:textSize="12sp"
                    android:textColor="@color/light_textcolor"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/nav5_act1_str_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act1_str7"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/light_textcolor"/>
            <TextView
                android:id="@+id/nav5_act1_str_7_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act1_str7_value"
                android:textSize="12sp"
                android:textColor="@color/light_textcolor"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/nav5_act1_str_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act1_str8"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/light_textcolor"/>
            <TextView
                android:id="@+id/nav5_act1_str_8_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act1_str8_value"
                android:textSize="12sp"
                android:textColor="@color/light_textcolor"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
        <Button
            android:id="@+id/nav5_act1_str_9"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nav5_act1_str9"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>