<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountChangeInfo1">
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="#EEE"
        android:orientation="vertical"
        android:paddingBottom="30dp">
        <TextView
            android:id="@+id/nav5_act2_str_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav5_act2_str0"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/light_textcolor"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/uad_icon"/>
        <TextView
            android:id="@+id/nav5_act1_str_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav5_act1_str1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/light_textcolor"/>
        <TextView
            android:id="@+id/nav5_act1_str_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav5_act1_str2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/light_textcolor"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/nav5_act2_str_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act2_str1"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/light_textcolor"/>
                <EditText
                    android:id="@+id/nav5_act2_str_1_value"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/nav5_act2_str1_value"
                    android:textColorHint="@color/light_textcolor"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:textColor="@color/light_textcolor"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="20dp">
                <TextView
                    android:id="@+id/nav5_act2_str_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act2_str2"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@color/light_textcolor"/>
                <EditText
                    android:id="@+id/nav5_act2_str_2_value"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/nav5_act2_str2_value"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:textColorHint="@color/light_textcolor"
                    android:textColor="@color/light_textcolor"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/nav5_act2_str_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act2_str3"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/light_textcolor"
                android:layout_marginRight="20dp"/>
            <RadioGroup
                android:id="@+id/nav5_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/nav5_act2_gender_value_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act2_str3_value1"
                    android:textColor="@color/light_textcolor"
                    android:textSize="12sp"
                    android:tag="false"/>
                <RadioButton
                    android:id="@+id/nav5_act2_gender_value_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav5_act2_str3_value2"
                    android:textColor="@color/light_textcolor"
                    android:textSize="12sp"
                    android:layout_marginStart="20dp"
                    android:tag="true"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/nav5_act2_str_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act2_str4"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/light_textcolor"/>
            <TextView
                android:id="@+id/nav5_act2_str_4_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/nav5_act2_str4_value"
                android:textSize="12sp"
                android:textColor="@color/light_textcolor"
                android:textColorHint="@color/light_textcolor"
                android:inputType="text"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">
            <Button
                android:id="@+id/nav5_act2_str_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav5_act2_str5"
                android:backgroundTint="#756A6A"
                android:textSize="20sp"
                android:textColor="@color/dark_textcolor"/>
            <Button
                android:id="@+id/nav5_act2_str_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/nav5_act2_str6"
                android:backgroundTint="@color/background_theme1"
                android:textSize="20sp"
                android:textColor="@color/light_textcolor"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>