<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#EEE">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:background="@color/light_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/login_str_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/login_str1"
            android:textColor="@color/light_textcolor"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_str_2"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_str2"
            android:textColor="@color/light_textcolor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
        <EditText
            android:id="@+id/login_str_2_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75"
            android:inputType="textEmailAddress"
            android:hint="@string/login_str2_value"
            android:ems="10"
            android:textSize="12sp"
            android:textColor="@color/light_textcolor"
            android:textColorHint="@color/light_textcolor"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/login_str_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_str3"
            android:textColor="@color/light_textcolor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75">
            <EditText
                android:id="@+id/login_str_3_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/login_str3_value"
                android:textSize="12sp"
                android:textColor="@color/light_textcolor"
                android:textColorHint="@color/light_textcolor"
                android:ems="10"
                android:inputType="textPassword"
                />
            <ImageView
                android:id="@+id/login_str_3_value_eye"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/baseline_visibility_off_24"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/login_str_4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_str4_1"
                android:textSize="12sp"
                android:textColor="@color/light_textcolor"
                />
            <TextView
                android:id="@+id/login_str_4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:text="@string/login_str4_2"
                android:textSize="12sp"
                android:textColor="@color/light_textcolor"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/login_str_5"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:text="@string/login_str5"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/light_textcolor"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75"
            android:text="@string/login_str1"
            android:textColor="@color/light_textcolor"
            android:backgroundTint="@color/background_theme1"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/login_str_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login_str6"
            android:textColor="#EC0808"
            android:textSize="9sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>